components/02-layouts/component-layouts/masonry-layout/_masonry-layout.scss
.masonry-grid {
  display: grid;
  grid-gap: $spacer-md;

  .case-list-teaser__body {
    top: 0;
  }
}

@media screen and (min-width: $grid-breakpoint-md-lg) {
  .masonry-grid {
    grid-template-columns: repeat(8, minmax(6rem, 1fr));
  }

  .span-4 {
    grid-column: span 4;
  }

  .span-3 {
    grid-column: span 3;
  }

  .span-5 {
    grid-column: span 5;
  }

  // 5+3, 3+5, 5+3, 3+5, ...
  .masonry-grid--alternating-asymmetric {
    > *:nth-child(4n + 1),
    > *:nth-child(4n + 4) {
      grid-column: span 5;
    }

    > *:nth-child(4n + 2),
    > *:nth-child(4n + 3) {
      grid-column: span 3;
    }
  }

  // 4+4, 5+3, 4+4, 3+5, ...
  .masonry-grid--mixed {
    > *:nth-child(4n + 1),
    > *:nth-child(4n + 2) {
      grid-column: span 4;
    }

    > *:nth-child(4n + 3) {
      grid-column: span 5;
    }

    > *:nth-child(4n + 4) {
      grid-column: span 3;
    }

    // Lone last item (at position 4n+1 or 4n+3) spans full width
    > *:nth-child(4n + 1):last-child,
    > *:nth-child(4n + 3):last-child {
      grid-column: span 8;
    }
  }
}

